[gd_scene load_steps=3 format=3 uid="uid://ci0hmgbadns1m"]

[ext_resource type="PackedScene" uid="uid://d6k50emm3h2c" path="res://bsp/BSPGenerator.tscn" id="1_661u6"]
[ext_resource type="Script" uid="uid://ci8g3bqpxvaur" path="res://bsp/visualized_tester.gd" id="1_ctxl2"]

[node name="Dungeon" type="Node2D"]
script = ExtResource("1_ctxl2")

[node name="DungeonDrawTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="BSPGenerator" parent="." instance=ExtResource("1_661u6")]
minimum_room_size = Vector2(100, 100)

[connection signal="timeout" from="DungeonDrawTimer" to="." method="_on_dungeon_draw_timer_timeout"]
[connection signal="new_split_made" from="BSPGenerator" to="." method="_on_bsp_generator_new_split_made"]
